rework installer to deploy Mattermost/Nginx on host and run Postgres via docker add systemd unit, config updates, and env plumbing for Mattermost refresh docs and configs to reflect mixed deployment model

--- a/config/opencanary.conf
+++ b/config/opencanary.conf
@@ -1,25 +1,14 @@
 {
-    "device.node_id": "azazel-pi5",
+    "device.node_id": "azazel-canary",
 
     "ssh.enabled": true,
-    "ssh.listen_addr": "0.0.0.0",
-    "ssh.listen_port": 22,
+    "ssh.port": 2222,
     "ssh.version": "SSH-2.0-OpenSSH_7.9p1 Debian-10+deb10u2",
     "ssh.banner": "SSH-2.0-OpenSSH_7.9p1 Debian-10+deb10u2",
 
     "http.enabled": true,
-    "http.listen_addr": "0.0.0.0",
-    "http.listen_port": 80,
-
-    "postgres.enabled": true,
-    "postgres.listen_addr": "0.0.0.0",
-    "postgres.listen_port": 5432,
-
-    "ftp.enabled": false,
-    "telnet.enabled": false,
-    "mysql.enabled": false,
-    "smb.enabled": false,
-    "rdp.enabled": false,
+    "http.port": 8081,
+    "http.skin": "basicLogin",
 
     "logger": {
         "class": "PyLogger",
@@ -32,7 +21,7 @@
             "handlers": {
                 "file": {
                     "class": "logging.handlers.RotatingFileHandler",
-                    "filename": "/logs/opencanary.log",
+                    "filename": "/var/log/azazel/canary.json",
                     "maxBytes": 10485760,
                     "backupCount": 5,
                     "formatter": "plain",
