installer: add mattermost download retry, backup and validation; make vector.service try /usr/local/bin or /usr/bin

--- a/systemd/vector.service
+++ b/systemd/vector.service
@@ -4,7 +4,8 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/vector --config /etc/azazel/vector/vector.toml
+# Try the common install locations: prefer /usr/local/bin (tarball) then /usr/bin (apt)
+ExecStart=/bin/sh -c '/usr/local/bin/vector --config /etc/azazel/vector/vector.toml || /usr/bin/vector --config /etc/azazel/vector/vector.toml'
 Restart=on-failure
 
 [Install]
