tests: make SuricataTail test non-blocking; add test configs and fixtures; pass config_path to StateMachine

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,12 @@
 [pytest]
 pythonpath = .
+testpaths = tests
+norecursedirs = .git .tox .env venv ENV build dist *.egg __pycache__ .pytest_cache
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+markers =
+    unit: Unit tests
+    integration: Integration tests
+    slow: Tests that take longer to run
+addopts = -v --tb=short
