feat: add wlan provisioning scripts and docs
- add Suricata installer, helper script, and local test rule
- document wlan0 AP setup and ship config templates
- default WAN interface references to wlan1 in configs and services

--- a/configs/profiles/fiber.yaml
+++ b/configs/profiles/fiber.yaml
@@ -1,5 +1,5 @@
 node: azazel-fiber-hub
-interfaces: { lan: lan0, wan: wan0 }
+interfaces: { lan: lan0, wan: wlan1 }
 profiles:
   active: fiber
   sat:   { uplink_kbps: 2500, rtt_ms: 600 }
