--- a/configs/network/azazel.yaml
+++ b/configs/network/azazel.yaml
@@ -1,5 +1,5 @@
 node: azazel-pi-01
-interfaces: { lan: lan0, wan: wan0 }
+interfaces: { lan: lan0, wan: wlan1 }
 profiles:
   active: lte
   sat:   { uplink_kbps: 2000, rtt_ms: 700 }
