--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ authors = [
 dependencies = [
     "pyyaml>=6.0",
     "requests>=2.28.0",
+    "rich>=13.0.0",
 ]
 
 [project.optional-dependencies]
