feat: adopt offline/hybrid AI evaluator and risk-based enforcement\n\n- Add Hybrid + Offline evaluators (deterministic Mock LLM)\n- Normalize categories; independent frequency counter; CIDR reputation\n- Idempotent traffic control with cleanup; state config fallback\n- Update docs to reflect offline hybrid (no Ollama/Docker)\n- Add regression tests for thresholds, category normalization, reputation

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@
 __pycache__/
 dist/
 build/
+
+# Python venv and caches
+.venv/
+.pytest_cache/
+
+# Local artifacts
+AI_IMPLEMENTATION_REPORT.json
+
+# Large model files
+models/
+
+# Environment files
+deploy/.env
+
+# OS/editor noise
+.DS_Store
+*.swp
