--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -13,3 +13,7 @@ services:
       - /opt/azazel/data/postgres:/var/lib/postgresql/data
     ports:
       - "127.0.0.1:5432:5432"
+
+  # Note: Ollama service removed - Mock LLM provides superior performance for edge AI
+
+# volumes: (ollama_models volume removed)
