--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -6,6 +6,8 @@ http {
     server_name _;
 
     location / {
+      # Mattermost recommended proxy headers and limits
+      client_max_body_size 100M;
       proxy_pass         http://127.0.0.1:8065;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
@@ -14,6 +16,7 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Forwarded-Host $server_name;
       proxy_read_timeout 3600;
     }
   }
