--- a/configs/ai_config.json
+++ b/configs/ai_config.json
@@ -1,27 +1,21 @@
 {
-  "ai_system": {
-    "primary_evaluator": "enhanced_offline",
-    "enable_mock_llm": true,
-    "fallback_enabled": true,
-    "ollama_integration": false,
-    "settings": {
+  "ai": {
+    "ollama_url": "http://127.0.0.1:11434/api/generate",
+    "model": "threatjudge",
+    "timeout": 30,
+    "max_payload_chars": 400,
+    "unknown_threat_detection": {
+      "enabled": true,
       "confidence_threshold": 0.7,
-      "risk_scaling": true,
-      "ensemble_weights": {
-        "pattern_matching": 0.4,
-        "payload_analysis": 0.15,
-        "target_analysis": 0.15,
-        "reputation_analysis": 0.1,
-        "temporal_analysis": 0.1,
-        "protocol_analysis": 0.1
-      }
+      "trigger_categories": ["unknown", "benign"],
+      "trigger_low_risk": true
     }
   },
-  "mock_llm": {
-    "enabled": true,
-    "response_templates": true,
-    "conversation_history": 10,
-    "realistic_variation": true
+  "hybrid": {
+    "legacy_weight": 0.6,
+    "mock_llm_weight": 0.4,
+    "ollama_weight": 0.7,
+    "unknown_detection_enabled": true
   },
-  "_note": "Ollama configuration removed - Mock LLM provides superior edge performance"
+  "_note": "Simplified Ollama integration: Mock LLM (fast) for known threats, Ollama (deep analysis) for unknown threats"
 }
