--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -14,6 +14,24 @@ services:
     ports:
       - "127.0.0.1:5432:5432"
 
-  # Note: Ollama service removed - Mock LLM provides superior performance for edge AI
+  ollama:
+    image: ollama/ollama:latest
+    container_name: azazel_ollama
+    restart: unless-stopped
+    ports:
+      - "127.0.0.1:11434:11434"
+    environment:
+      - OLLAMA_KEEP_ALIVE=24h
+      - OLLAMA_HOST=0.0.0.0
+    volumes:
+      - ollama_data:/root/.ollama
+      - /opt/models:/models:ro
+    healthcheck:
+      test: ["CMD", "ollama", "ps"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
 
-# volumes: (ollama_models volume removed)
+volumes:
+  ollama_data:
