Fix docker-compose PostgreSQL environment variables
- Added default values for POSTGRES_DB, POSTGRES_USER, POSTGRES_PASSWORD
- Prevents empty database creation when environment variables are not set
- Uses defaults: mattermost/mmuser/securepassword matching Mattermost config

This resolves the password authentication failure that was preventing
Mattermost from connecting to PostgreSQL.

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     container_name: azazel_postgres
     restart: always
     environment:
-      POSTGRES_DB: ${MATTERMOST_DB_NAME}
-      POSTGRES_USER: ${MATTERMOST_DB_USER}
-      POSTGRES_PASSWORD: ${MATTERMOST_DB_PASSWORD}
+      POSTGRES_DB: ${MATTERMOST_DB_NAME:-mattermost}
+      POSTGRES_USER: ${MATTERMOST_DB_USER:-mmuser}
+      POSTGRES_PASSWORD: ${MATTERMOST_DB_PASSWORD:-securepassword}
     volumes:
       - /opt/azazel/data/postgres:/var/lib/postgresql/data
     ports:
