--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "hatchling.build"
 
 [project]
 name = "azazel-pi"
-version = "1.5.0"
+version = "2.0.0"
 description = "Network Security Monitoring and Response System"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
 authors = [
-    { name = "01rabbit", email = "your.email@example.com" }
+    { name = "01rabbit", email = "appleseedj073@gmail.com" }
 ]
 dependencies = [
     "pyyaml>=6.0",
