epd(renderer): attempt driver.init() before display to wake from sleep; increase startup delay

--- a/systemd/azazel-epd.service.d/override.conf
+++ b/systemd/azazel-epd.service.d/override.conf
@@ -8,4 +8,8 @@ Environment=EPD_OPTS=--debug
 Environment=PYTHONFAULTHANDLER=1
 
 # Small start delay to reduce race with system SPI/GPIO initialization
-ExecStartPre=/bin/sleep 2
+# Increase to 5s to give other system services/time to release GPIO resources
+ExecStartPre=/bin/sleep 5
+
+# Give systemd some time before restarting to avoid tight restart loops
+RestartSec=5
