Add dynamic WAN selection with health checks and failover
Introduce dynamic WAN selection to monitor and select the optimal WAN interface at runtime.

Changes include:
- Health check subsystem for WAN interfaces (periodic latency and reachability probes).
- Scoring algorithm to evaluate interfaces using latency, throughput and error rates.
- Failover and recovery logic to move traffic away from degraded links.
- Configuration options to tune probe intervals, thresholds, and to enable/disable selection.
- Integration with existing WAN manager/daemon and CLI.
- Unit and integration tests covering key scenarios.
- README and config schema updates with usage examples.

This improves availability and performance for multi-WAN deployments while keeping backward compatibility when the feature is disabled.

--- a/configs/monitoring/notify.yaml
+++ b/configs/monitoring/notify.yaml
@@ -44,6 +44,8 @@ opencanary:
 
 # ネットワーク制御設定
 network:
+  # 遅延制御対象インタフェース（例: wlan1）。ランタイムでの検出を優先する場合は
+  # 環境変数 AZAZEL_WAN_IF を設定してください（例: export AZAZEL_WAN_IF=wlan1）。
   interface: "wlan1"           # 遅延制御対象インタフェース
   inactivity_minutes: 2        # 無活動判定時間
   delay:
