--- a/configs/profiles/lte.yaml
+++ b/configs/profiles/lte.yaml
@@ -1,4 +1,7 @@
 node: azazel-lte-field
+# Interface examples: override at runtime via AZAZEL_LAN_IF / AZAZEL_WAN_IF
+# e.g. export AZAZEL_LAN_IF=${AZAZEL_LAN_IF:-wlan0}
+#      export AZAZEL_WAN_IF=${AZAZEL_WAN_IF:-wlan1}
 interfaces: { lan: lan0, wan: wlan1 }
 profiles:
   active: lte
