--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15
@@ -13,6 +11,8 @@ services:
       - /opt/azazel/data/postgres:/var/lib/postgresql/data
     ports:
       - "127.0.0.1:5432:5432"
+    networks:
+      - azazel_net
 
   ollama:
     image: ollama/ollama:latest
@@ -32,6 +32,26 @@ services:
       timeout: 10s
       retries: 3
       start_period: 60s
+    networks:
+      - azazel_net
+
+  opencanary:
+    image: thinkst/opencanary:latest
+    container_name: azazel_opencanary
+    restart: always
+    volumes:
+      - /opt/azazel/config/opencanary.conf:/root/.opencanary.conf:ro
+      - /opt/azazel/logs:/logs
+    networks:
+      azazel_net:
+        ipv4_address: 172.16.10.10
 
 volumes:
   ollama_data:
+
+networks:
+  azazel_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.16.10.0/24
