Commit remaining workspace changes: update menus, docs, systemd units, and scripts
Include: updates to azctl menus and core, docs (en/ja), deploy config files (opencanary/vector), updated installers and sanity check, systemd unit adjustments, and removal of tmp/events.json. This commit stages previously unstaged edits so the branch fully reflects on-host changes.

--- a/deploy/vector.toml
+++ b/deploy/vector.toml
@@ -5,7 +5,7 @@
 ##### SOURCE: OpenCanary ######################################################
 [sources.opencanary_raw]
 type        = "file"
-include     = ["/logs/opencanary.log"]
+include     = ["/logs/opencanary.log", "/opt/azazel/logs/opencanary.log"]
 read_from   = "end"
 fingerprinting.strategy = "device_and_inode"
 
