--- a/deploy/opencanary.conf
+++ b/deploy/opencanary.conf
@@ -21,7 +21,7 @@
             "handlers": {
                 "file": {
                     "class": "logging.handlers.RotatingFileHandler",
-                    "filename": "/var/log/azazel/canary.json",
+                    "filename": "/logs/opencanary.log",
                     "maxBytes": 10485760,
                     "backupCount": 5,
                     "formatter": "plain",
