自動コミット: 作業中の変更を保存 (feature/suricata-automation)

--- a/systemd/azazel-priorityd.service
+++ b/systemd/azazel-priorityd.service
@@ -3,6 +3,8 @@ Description=Azazel Priority Daemon
 After=azazel-traffic-init.service
 
 [Service]
+User=root
+Group=root
 ExecStart=/usr/bin/python3 /opt/azazel/services/azazel_priorityd.py
 Restart=always
 RestartSec=2
