--- a/systemd/azazel-traffic-init.service
+++ b/systemd/azazel-traffic-init.service
@@ -5,6 +5,8 @@ Wants=network-online.target
 
 [Service]
 Type=oneshot
+User=root
+Group=root
 ExecStart=/usr/bin/env bash /opt/azazel/bin/azazel-traffic-init.sh /opt/azazel/configs/network/azazel.yaml
 RemainAfterExit=yes
 
