Migrate from nftables to iptables for better Docker compatibility
Changes:
- Disabled nftables service and minimized /etc/nftables.conf
- Migrated NAT rules to iptables (172.16.0.0/24, 172.16.10.0/24 MASQUERADE)
- Updated installer scripts (setup_wireless.sh, install_azazel.sh)
- Converted ai_policy_block.sh from nftables to iptables
- Rewrote azazel_update_dnat.sh to use iptables DNAT
- Deprecated nft_apply.sh with migration notice
- Updated documentation (README.md, README_ja.md, scripts/README.md)
- Added configs/nftables/README.md explaining the migration
- Created iptables_save.sh for rule persistence
- Updated OpenCanary config to use loopback (127.0.0.1:2222, 8081)
- Updated docker-compose.yml to publish OpenCanary ports on all interfaces
- Fixed traffic_control.py to avoid duplicate redirect entries
- Added watch_eve_redirect.py and manual_monitor.sh for testing

This resolves the issue where inet filter/forward policy drop was
blocking Docker container traffic including OpenCanary SSH (port 2222).

--- a/configs/network/azazel.yaml
+++ b/configs/network/azazel.yaml
@@ -26,8 +26,8 @@ soc:
     - "ET TROJAN"
     - "Critical Infrastructure Attack"
 canary:
-  # OpenCanary honeypot IP address (Docker bridge azazel_net)
-  ip: "172.16.10.10"
+  # OpenCanary honeypot IP address (loopback binding via Docker)
+  ip: "127.0.0.1"
   port: 22  # Default SSH port for honeypot
 actions:
   normal:   { delay_ms: 0,   shape_kbps: null, block: false }
