--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -39,12 +39,15 @@ services:
     image: thinkst/opencanary:latest
     container_name: azazel_opencanary
     restart: always
+    # Publish to all interfaces so 2222/8081 are reachable from outside.
+    ports:
+      - "0.0.0.0:2222:2222"
+      - "0.0.0.0:8081:8081"
     volumes:
       - /opt/azazel/config/opencanary.conf:/root/.opencanary.conf:ro
       - /opt/azazel/logs:/logs
     networks:
-      azazel_net:
-        ipv4_address: 172.16.10.10
+      - azazel_net
 
 volumes:
   ollama_data:
