Fix: OpenCanary DNAT redirect and notification deduplication
Major improvements:
- Fixed DNAT rules to properly redirect SSH (port 22 -> 2222) to OpenCanary container
- Updated OpenCanary IP from loopback (127.0.0.1) to direct container IP (172.16.10.3)
- Added interface specification (-i wlan1) to DNAT rules for external traffic only
- Fixed port translation in iptables DNAT rules (--to-destination 172.16.10.3:2222)
- Moved AI evaluation under notification cooldown control to prevent spam
- Added idempotency check for DNAT redirects to prevent duplicate rules

Technical changes:
1. traffic_control.py: Enhanced _try_add_iptables_dnat() with proper rule format
2. main_suricata.py: Moved notify_ai_analysis_async() inside should_notify() block
3. All config files: Updated canary IP to 172.16.10.3 and port to 2222
4. notify_config.py, delay_action.py: Updated default OpenCanary IP

This ensures:
- Attackers are properly redirected to honeypot regardless of their IP
- Dynamic WAN interface detection via get_active_wan_interface()
- No duplicate notifications/AI evaluations (60s cooldown respected)
- Docker container networking compatibility

--- a/configs/network/azazel.yaml
+++ b/configs/network/azazel.yaml
@@ -26,9 +26,9 @@ soc:
     - "ET TROJAN"
     - "Critical Infrastructure Attack"
 canary:
-  # OpenCanary honeypot IP address (loopback binding via Docker)
-  ip: "127.0.0.1"
-  port: 22  # Default SSH port for honeypot
+  # OpenCanary honeypot IP address (direct container IP)
+  ip: "172.16.10.3"
+  port: 2222  # OpenCanary SSH port
 actions:
   normal:   { delay_ms: 0,   shape_kbps: null, block: false }
   portal:   { delay_ms: 0,   shape_kbps: null, block: false }
