--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ authors = [
     { name = "01rabbit", email = "appleseedj073@gmail.com" }
 ]
 dependencies = [
+    "flask>=3.1.0",
     "pyyaml>=6.0",
     "requests>=2.28.0",
     "rich>=13.0.0",
