--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pyyaml>=6.0",
     "requests>=2.28.0",
     "rich>=13.0.0",
+    "textual>=0.58.0",
 ]
 
 [project.optional-dependencies]
