--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,56 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.11, 3.12]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e .[test]
-          pip install ruff mypy
-
-      - name: Run linter (ruff)
-        run: |
-          ruff check .
-
-      - name: Run mypy
-        run: |
-          mypy azazel_pi --ignore-missing-imports
-
-      - name: Run tests
-        run: |
-          pytest -q
-name: CI
-
-on:
-  push:
-    branches: [ main, feature/** ]
+    branches: [ main, feature/**, codex/** ]
   pull_request:
     branches: [ main ]
 
@@ -78,7 +29,6 @@ jobs:
 
       - name: Install project and test dependencies
         run: |
-          # Install package in editable mode and test extras from pyproject
           .venv/bin/pip install -e '.[test]'
           # Pillow is optional in pyproject; ensure it is present for renderer tests
           .venv/bin/pip install pillow
@@ -86,9 +36,9 @@ jobs:
       - name: Run tests
         run: .venv/bin/pytest -v
 
-      - name: Upload pytest JUnit result (optional)
+      - name: Upload pytest cache (optional)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: pytest-log
+          name: pytest-cache
           path: .pytest_cache
