--- a/configs/notify.yaml
+++ b/configs/notify.yaml
@@ -77,3 +77,11 @@ deep_eval:
 # 通知周りの挙動調整
 notify:
   notify_retries: 2
+  ntfy:
+    enabled: true
+    base_url: "http://10.55.0.10:8081"
+    token_file: "/etc/azazel/ntfy.token"
+    topic_alert: "azg-alert-critical"
+    topic_info: "azg-info-status"
+    cooldown_sec: 30
+    timeout_seconds: 2.0
